# MPP

./: README.md  pyproject.toml
src/pyprallel/: cli.py
src/pyprallel/compat/: detection.py
src/pyprallel/examples/: hello_cores.py
